# argus

./: .dockerignore  .gitignore  Cargo.toml  DEPLOY.md  Dockerfile.api  LICENSE  README.md  ROADMAP.md  docker-compose.yml  intel-cache.json
.github/workflows/: ci.yml
.superpowers/sdd/: final-review-fix-report.md
crates/argus-api/: Cargo.toml
crates/argus-api/migrations/: 0001_tenancy.sql  0002_monitoring.sql  0003_findings.sql  0004_login_attempts.sql  0005_webhooks.sql
crates/argus-api/src/: account.rs  audit.rs  auth.rs  cookies.rs  db.rs  findings.rs  graph.rs  main.rs  monitor.rs  policy.rs  report.rs  scan.rs  seed.rs  store.rs  vulns.rs  webhook.rs
crates/argus-core/: Cargo.toml
crates/argus-core/src/: asset.rs  finding.rs  ids.rs  lib.rs  network.rs  risk.rs  role.rs  tenant.rs  vuln.rs
crates/argus-discovery/: Cargo.toml
crates/argus-discovery/data/: oui-prefixes.txt
crates/argus-discovery/examples/: deep_recon.rs  home_scan.rs  mdns_probe.rs  upnp_probe.rs
crates/argus-discovery/src/: arp.rs  arpscan.rs  bacnet.rs  banner.rs  ber.rs  coap.rs  enip.rs  fingerprint.rs  fusion.rs  http.rs  ipp.rs  ldap.rs  lib.rs  main.rs  masscan.rs  mdns.rs  miio.rs  modbus.rs  mqtt.rs  mssql.rs  netbios.rs  nmap.rs  oui.rs  pjl.rs  portscan.rs  rdns.rs  rtsp.rs  sampling.rs  smb.rs  snmp.rs  ssdp.rs  target.rs  tls.rs  wsd.rs
crates/argus-eval/: Cargo.toml
crates/argus-eval/data/: catalog-audit-2026-06.md  ff1-ground-truth.csv  ff2-sample.csv  ff3-sample.csv
crates/argus-eval/scripts/: fetch_nvd_cvss.ps1  gen_catalog_records.ps1  join_ff2.ps1
crates/argus-eval/src/: ff1.rs  ff2.rs  ff3.rs  main.rs
crates/argus-intel/: Cargo.toml
crates/argus-intel/src/: lib.rs
crates/argus-policy/: Cargo.toml
crates/argus-policy/src/: lib.rs
crates/argus-report/: Cargo.toml
crates/argus-report/src/: action.rs  lib.rs
crates/argus-sensor/: Cargo.toml
crates/argus-sensor/src/: dhcp.rs  http.rs  lib.rs  tcp.rs
crates/argus-vuln/: Cargo.toml
crates/argus-vuln/examples/: enrich.rs
crates/argus-vuln/src/: catalog.rs  intel.rs  lib.rs  nvd.rs  version.rs
deploy/school/: .env.school.example  Caddyfile  docker-compose.yml
deploy/simnet/: README.md  docker-compose.yml  ground-truth.csv
docs/: discovery-plan.md
docs/superpowers/plans/: 2026-06-21-design-system-completion.md  2026-06-21-ux-flow-completeness.md  2026-06-21-visual-polish.md  2026-06-23-school-edition-cycle1.md  2026-06-25-school-edition-cycle2.md
docs/superpowers/specs/: 2026-06-03-argus-platform-design.md  2026-06-21-design-system-completion-design.md  2026-06-21-ux-flow-completeness-design.md  2026-06-21-visual-polish-design.md  2026-06-23-school-edition-design.md
web/: Dockerfile  next.config.ts  package-lock.json  package.json
web/src/app/: error.tsx  globals.css  layout.tsx  page.tsx
web/src/app/assets/: page.tsx
web/src/app/brand/: page.tsx
web/src/app/dev/ui/: page.tsx
web/src/app/graph/: page.tsx
web/src/app/login/: page.tsx
web/src/app/network/: page.tsx
web/src/app/policy/: page.tsx
web/src/app/reports/: page.tsx
web/src/app/risk/: page.tsx
web/src/app/settings/: page.tsx
web/src/app/vulns/: page.tsx
web/src/components/: activity-feed.tsx  app-shell.tsx  argus-mark.tsx  asset-drawer.tsx  asset-graph.tsx  assets-view.tsx  command-palette.tsx  dashboard.tsx  data-sources.tsx  graph-view.tsx  icon.tsx  live-region.tsx  marks.tsx  network-view.tsx  overview.tsx  placeholder.tsx  policy-view.tsx  reports-view.tsx  risk-badge.tsx  risk-distribution.tsx  risk-view.tsx  sidebar.tsx  states.tsx  theme.tsx  topbar.tsx  ui.tsx  vulns-view.tsx
web/src/components/ui/: controls.tsx  data.tsx  feedback.tsx  index.ts  internal.ts  layout.tsx  overlay-core.ts  overlays.tsx  toast.tsx
web/src/components/ui/__tests__/: checkbox.test.tsx  command-palette.test.tsx  icon.test.tsx  link.test.tsx  menu.test.tsx  modal.test.tsx  overlay-core.test.tsx  pagination.test.tsx  skeleton.test.tsx  smoke.test.tsx  table-rowclick.test.tsx  table.test.tsx  tabs.test.tsx  textarea.test.tsx  theme.test.tsx  toast.test.tsx  tooltip.test.tsx
web/src/lib/: api.ts  auth.tsx  session.ts  ui.ts  use-events.ts  use-graph.ts  use-inventory.ts  use-policy.ts  use-polled-resource.ts  use-report.ts  use-vulns.ts
web/src/lib/__tests__/: ui.test.ts
