[workspace]
resolver = "2"
members = ["crates/argus-core", "crates/argus-api", "crates/argus-discovery", "crates/argus-vuln", "crates/argus-intel"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.83"
license = "Apache-2.0"
authors = ["Argus contributors"]
repository = "https://github.com/mmadersbacher/argus"
homepage = "https://github.com/mmadersbacher/argus"
readme = "README.md"
keywords = ["security", "asset-management", "caasm", "exposure", "vulnerability"]
categories = ["command-line-utilities", "network-programming"]

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
doc_markdown = "allow"
# `Cvss`/`Epss`/`Vulnerability`/`Risk*` carry `f32` and cannot derive `Eq`;
# allowing this workspace-wide is cleaner than scattering `#[allow]` on the
# structs that happen to qualify (e.g. `Asset`).
derive_partial_eq_without_eq = "allow"
# Often impossible because dependency methods (`f32::clamp`, `mul_add`, ...)
# aren't `const`.
missing_const_for_fn = "allow"

[workspace.dependencies]
# Domain
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
time = { version = "0.3", features = ["serde", "serde-well-known", "macros", "std"] }
thiserror = "2"
ipnet = "2"
roxmltree = "0.20"

# Async + HTTP
tokio = { version = "1", features = ["full"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "trace"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "json", "migrate", "macros", "uuid", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Auth
jsonwebtoken = "9"
argon2 = { version = "0.5", features = ["std"] }
rand = "0.8"
sha2 = "0.10"
hex = "0.4"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
