[package]
name = "argus-api"
description = "Argus HTTP API (axum): assets, dashboard summary, health."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
argus-core = { path = "../argus-core" }
argus-discovery = { path = "../argus-discovery" }
argus-vuln = { path = "../argus-vuln" }
argus-intel = { path = "../argus-intel" }
argus-report = { path = "../argus-report" }
argus-policy = { path = "../argus-policy" }
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
jsonwebtoken = { workspace = true }
argon2 = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
# `oneshot` drives the router in the cookie/CSRF integration test without a
# live socket (tower-http already pins tower 0.5 in the tree).
tower = { version = "0.5", features = ["util"] }
