[package]
name = "argus-core"
description = "Argus domain model: tenants, assets, network entities, vulnerabilities, findings, risk scoring."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }

[dev-dependencies]
serde_json = "1"
