[package]
name = "argus-discovery"
description = "Argus light active discovery: safe TCP-connect host/service scan."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
argus-core = { path = "../argus-core" }
tokio = { workspace = true }
ipnet = { workspace = true }
roxmltree = { workspace = true }
serde = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
argus-intel = { path = "../argus-intel" }
socket2 = "0.5"
