[package]
name = "argus-intel"
description = "Argus device classification: vendor/port/service signals → device class (with a trained-model seam)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
argus-core = { path = "../argus-core" }
