[package]
name = "argus-policy"
description = "Argus advisory segmentation: evaluate the inventory against zoning and exposure rules and emit actionable advisories."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
argus-core = { path = "../argus-core" }
serde = { workspace = true }
