[package]
name = "argus-vuln"
description = "Argus vulnerability correlation: match services to known CVEs (CVSS/EPSS/KEV) and derive risk inputs."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
argus-core = { path = "../argus-core" }
reqwest = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
