[package]
name = "argus-vuln"
description = "Argus vulnerability correlation: match services to known CVEs (CVSS/EPSS/KEV) and derive risk inputs."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
argus-core = { path = "../argus-core" }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
# `test-util` (not part of tokio's `full`) gives the rate-gate test a paused
# clock so its pacing assertions are deterministic, not wall-clock-flaky.
tokio = { workspace = true, features = ["test-util"] }
